2020-04-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 10

2018-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Drop compatibility with TYPO3 7, prepare for TYPO3, code cleanup, resolves #6
	* Add functional tests
	* Release version 2.3.0

2018-07-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated documentation regarding allowed absolute file paths
	* Released version 2.2.2 and 2.2.3

2018-02-15 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated headers initialization (thanks to Alex Böswetter)
	* Released version 2.2.1

2018-01-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.2.0

2018-01-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Used new FileUtility for reading files, resolves #4
	* Improved localised error strings, resolves #1

2017-04-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.1.0

2017-04-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 8, resolves #3

2016-05-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.0.0, resolves #76005

2016-04-25 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Refactored for TYPO3 CMS 7, resolves #75926

2014-06-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.5.0, resolves #57779

2014-04-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.2, resolves #57532
	* Implemented new API from base connector, resolves #57552

2013-07-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.1, resolves #50259
	* Released version 1.4.0

2013-01-24 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.3.0

2013-01-11 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.0, resolves #44467

2012-09-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.2.0

2012-09-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>
